--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
       "name": "Mees van Dijk",
       "email": "mees@itisme.es",
       "url": "https://mees.io"
+    },
+    {
+      "name": "Sytze de Witte",
+      "email": "dewitte.sytze9@gmail.com",
+      "url": "https://youtube.com/switeofficial"
     }
   ],
   "license": "MIT",
