--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     {
       "name": "Tijmen Krijnen",
-      "email":  "tijmen.krijnen@gmail.com",
+      "email": "tijmen.krijnen@gmail.com",
       "url": ""
     },
     {
@@ -25,6 +25,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "basy": "^0.2.2",
     "serialport": "^6.0.4"
   }
 }
