deleted url tijmen

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     },
     {
       "name": "Tijmen Krijnen",
-      "email": "tijmen.krijnen@gmail.com",
-      "url": ""
+      "email": "tijmen.krijnen@gmail.com"
     },
     {
       "name": "Sytze de Witte",
