added so many stuffs

--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   "license": "MIT",
   "dependencies": {
     "basy": "^0.2.2",
-    "serialport": "^6.0.4"
+    "fs-extra": "^4.0.2",
+    "hasha": "^3.0.0",
+    "serialport": "^6.0.4",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "prettier": "^1.7.4"
