--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.2",
+    "forever": "^0.15.3",
     "fs-extra": "^4.0.2",
     "hasha": "^3.0.0",
     "minimist": "^1.2.0",
